First effort with docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,47 +32,40 @@ matrix:
        compiler: gcc
        sudo: false
        dist: trusty
-     - os: osx
-       compiler: gcc
-       osx_image: xcode9.4
+
+#======================================================================
+# Docker, does not work on Mac
+#======================================================================
+services:
+  - docker
 
 #======================================================================
 # Building
 #======================================================================
 before_install:
   - |
-      if [[ "$TRAVIS_OS_NAME" == "osx" ]] ; then
-          brew install gcc@7 || true;
-          brew link --overwrite gcc@7;
-      fi
-  - |
       if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then
           pip install --user cpp-coveralls
       fi
 
-before_script:
-  - |
-      if [[ "$TRAVIS_OS_NAME" == "osx" ]] ; then
-          export CC="clang" FC="gfortran-7" CXX="clang++" ;
-      fi
-  - |
-      if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then
-          export CC="gcc-6" FC="gfortran-6" CXX="g++-6" ;
-      fi
-#  - export CC="gcc-6" FC="gfortran-6" CXX="g++-6" ;
-
 script:
-  - make
-  - |
-      if [[ "$TRAVIS_OS_NAME" == "linux" ]] ; then
-          export LD_LIBRARY_PATH=${PWD}/schemes/check/src/check-build
-          make test
-      fi
-  - |
-      if [[ "$TRAVIS_OS_NAME" == "osx" ]] ; then
-          export DYLD_LIBRARY_PATH=${PWD}/schemes/check/src/check-build
-          make test
-      fi
+  - date
+  - docker build -t wrf_regtest .
+  - date
+  - docker images -a
+  - date
+  - docker run -d -t --name test_001 wrf_regtest
+  - date
+  - docker ps -a
+  - date
+  - docker exec test_001 ./script.csh BUILD CLEAN 34 1 em_real -d
+  - OK=$?
+  - echo "Return code from docker is $OK"
+  - date
+  - docker stop test_001
+  - date
+  - docker rmi wrf_regtest
+  - date
 
 #======================================================================
 # Notifications
