Find out list of TRAVIS variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,7 @@ script:
   - date
   - docker rmi wrf_regtest
   - date
+  - env | grep TRAVIS_
 
 #======================================================================
 # Notifications
