--- a/Dockerfile-template
+++ b/Dockerfile-template
@@ -13,7 +13,8 @@ ENV NML_VERSION 4.0.2
 RUN yum -y update
 RUN yum -y install file gcc gcc-gfortran gcc-c++ glibc.i686 libgcc.i686 libpng-devel jasper \
   jasper-devel hostname m4 make perl tar bash tcsh time wget which zlib zlib-devel \
-  openssh-clients openssh-server net-tools fontconfig libgfortran libXext libXrender ImageMagick sudo epel-release
+  openssh-clients openssh-server net-tools fontconfig libgfortran libXext libXrender \
+  ImageMagick sudo epel-release git
 #
 # now get 3rd party EPEL builds of netcdf and openmpi dependencies
 RUN yum -y install netcdf-openmpi-devel.x86_64 netcdf-fortran-openmpi-devel.x86_64 \
