--- a/.travis.yml
+++ b/.travis.yml
@@ -66,9 +66,11 @@ script:
   - date
   - docker exec test_001 ls -ls WRF/main
   - date
-  - docker exec -w WRF test_001 git log --oneline
+  - docker exec -w /wrf/WRF test_001 git log --oneline | head -50
   - date
   - docker exec test_001 ./script.csh RUN em_real 34 em_real 03DF
+  - date
+  - docker exec -w /wrf/WRF/test/em_real test_001 ls -ls 
   - date
   - docker stop test_001
   - date
