--- a/.travis.yml
+++ b/.travis.yml
@@ -63,13 +63,20 @@ script:
   - docker ps -a
   - date
   - docker exec test_001 ./script.csh BUILD CLEAN 34 1 em_real -d
-  - date
-  - docker exec test_001 ls -ls WRF/main
-  - date
-  - docker exec test_001 ./script.csh RUN em_real 34 em_real 03DF
-  - date
-  - docker exec test_001 ls -ls WRF/test/em_real
-  - date
+  - |
+      OK=$?
+      if [[ $OK != 0 ]] ; then
+         docker exec test_001 ls -ls WRF/compile.log.em_real.34
+         date
+      else
+         date
+         docker exec test_001 ls -ls WRF/main
+         date
+         docker exec test_001 ./script.csh RUN em_real 34 em_real 03DF
+         date
+         docker exec test_001 ls -ls WRF/test/em_real
+         date
+      fi
   - docker stop test_001
   - date
   - docker rm test_001
