cat the wrf build log, not just an ls, we want to see what failed

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,7 @@ script:
       OK=$?
       if [[ $OK != 0 ]] ; then
          docker exec test_001 ls -ls WRF/compile.log.em_real.34
+         docker exec test_001 cat WRF/compile.log.em_real.34
          date
       else
          date
