--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ script:
   - date
   - sed -e 's/_HERE1_/"DAVE START"/' -e 's/_HERE2_/"DAVE END CLONE"/' Dockerfile-template > Dockerfile
   - date
-  - docker build -t wrf_regtest .
+  - docker build -t wrf_regtest --build-arg argname=regtest .
   - date
   - docker images -a
   - date
