--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ script:
   - |
       if [ $OK_wrf = 0 ] && ([ $OK_real = 0 ] || [ $OK_nmm = 0 ] || [ $OK_ideal = 0 ]) ; then
          date
-         docker exec test_001 ./script.csh RUN em_real 34 em_real 03DF
+         docker exec test_001 ./script.csh RUN em_real 34 em_real 03DF NP=3
          date
          docker exec test_001 cat WRF/test/em_real/real.print.out
          date
