--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,9 @@ addons:
 #======================================================================
 # Build Matrix
 #======================================================================
-matrix:
-   include:
-     - os: linux
-       compiler: gcc
-       sudo: false
-       dist: trusty
-       env name=real_s   core=em_real  par=32 nest=1 data_loc=em_real test=07NE proc=1 cenv='WRF_EM_CORE=1'
+env:
+   matrix:
+      - name=real_s   core=em_real  par=32 nest=1 data_loc=em_real test=07NE proc=1 cenv='WRF_EM_CORE=1'
 
 services:
   - docker
