.travis.yml: cleanup unnecessary parts
1. cenv gets {}, not required, but conventional for script
2. zap entire "addons" with the "apt" "ubuntu" packages" and "gcc" stuff
3. remove language=fortran, never used sine we are doing containers
4. make branches of interest: master, release-v*, and develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,11 @@
 #======================================================================
-# Project settings
+# Which branches are impacted by this
 #======================================================================
-# Only build master.
 branches:
   only:
       - master
-
-language: fortran
-
-#======================================================================
-# Environment
-#======================================================================
-
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gcc-8
-      - gfortran-8
-      - g++-8
-      - lcov
+      - develop
+      - /^release-v.*$/
 
 #======================================================================
 # Build Matrix
@@ -56,7 +41,7 @@ script:
   - date
   - docker ps -a
   - date
-  - docker exec ${name} ./script.csh BUILD CLEAN ${par} ${nest} ${core} -d J=-j@3 $cenv
+  - docker exec ${name} ./script.csh BUILD CLEAN ${par} ${nest} ${core} -d J=-j@3 ${cenv}
   - date
   - OK=0
   - |
