.travis.yml and Dockerfile-template: 3 matrix tests, use fifthtry dockerhub version

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ branches:
 env:
    matrix:
       - name=real_s   core=em_real  par=32 nest=1 data_loc=em_real test=07NE proc=1 cenv='WRF_EM_CORE=1'
+      - name=real_o   core=em_real  par=33 nest=1 data_loc=em_real test=07NE proc=3 cenv='WRF_EM_CORE=1'
+      - name=real_m   core=em_real  par=34 nest=1 data_loc=em_real test=07NE proc=3 cenv='WRF_EM_CORE=1'
 
 services:
   - docker
