--- a/Dockerfile-template
+++ b/Dockerfile-template
@@ -1,5 +1,5 @@
 #
-FROM davegill/wrf-coop:fourthtry
+FROM davegill/wrf-coop:fifthtry
 MAINTAINER Dave Gill <gill@ucar.edu>
 
 #RUN echo _HERE1_
@@ -13,11 +13,10 @@ MAINTAINER Dave Gill <gill@ucar.edu>
 
 RUN git clone https://github.com/wrf-model/WRF.git WRF \
   && cd WRF \
-  && git checkout release-v4.1.1 \
-  && git checkout master \
-  && git checkout develop \
-  && git checkout release-v4.1 \
+  && git checkout release-v4.1.2 \
   && cd ..
+
+RUN curl -SL http://www2.mmm.ucar.edu/wrf/dave/script.tar | tar -xC /wrf
 
 VOLUME /wrf
 CMD ["/bin/tcsh"]
