.travis.yml - zap chem for good; try to build without -d, rrtmg sw K internal failures intermittently

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,30 +12,31 @@ branches:
 #======================================================================
 env:
    matrix:
-      - name=real_s   core=em_real        par=32 nest=1 flag='-d'     data_loc=em_real        test=07NE proc=1 cenv='WRF_EM_CORE=1'
-      - name=real_o   core=em_real        par=33 nest=1 flag='-d'     data_loc=em_real        test=07NE proc=3 cenv='WRF_EM_CORE=1'
-      - name=real_m   core=em_real        par=34 nest=1 flag='-d'     data_loc=em_real        test=07NE proc=3 cenv='WRF_EM_CORE=1'
-      - name=nmm_s    core=nmm_real       par=32 nest=1 flag='-d'     data_loc=nmm_nest       test=01   proc=1 cenv='WRF_NMM_CORE=1'
-      - name=nmm_m    core=nmm_real       par=34 nest=1 flag='-d'     data_loc=nmm_nest       test=01   proc=3 cenv='WRF_NMM_CORE=1'
-      - name=chem_s   core=em_real        par=32 nest=1 flag='-d'     data_loc=em_chem        test=1    proc=1 cenv='WRF_CHEM=1'
-      - name=chem_m   core=em_real        par=34 nest=1 flag='-d'     data_loc=em_chem        test=1    proc=3 cenv='WRF_CHEM=1'
-      - name=qss_s    core=em_quarter_ss  par=32 nest=1 flag='-d'     data_loc=em_quarter_ss  test=02NE proc=1 cenv='WRF_EM_CORE=1'
-      - name=qss_o    core=em_quarter_ss  par=33 nest=1 flag='-d'     data_loc=em_quarter_ss  test=02NE proc=3 cenv='WRF_EM_CORE=1'
-      - name=qss_m    core=em_quarter_ss  par=34 nest=1 flag='-d'     data_loc=em_quarter_ss  test=02NE proc=3 cenv='WRF_EM_CORE=1'
-      - name=bw_s     core=em_b_wave      par=32 nest=1 flag='-d'     data_loc=em_b_wave      test=1NE  proc=1 cenv='WRF_EM_CORE=1'
-      - name=bw_o     core=em_b_wave      par=33 nest=1 flag='-d'     data_loc=em_b_wave      test=1NE  proc=3 cenv='WRF_EM_CORE=1'
-      - name=bw_m     core=em_b_wave      par=34 nest=1 flag='-d'     data_loc=em_b_wave      test=1NE  proc=3 cenv='WRF_EM_CORE=1'
-      - name=real8_s  core=em_real        par=32 nest=1 flag='-d -r8' data_loc=em_real8       test=14   proc=1 cenv='WRF_EM_CORE=1'
-      - name=real8_o  core=em_real        par=33 nest=1 flag='-d -r8' data_loc=em_real8       test=14   proc=3 cenv='WRF_EM_CORE=1'
-      - name=real8_m  core=em_real        par=34 nest=1 flag='-d -r8' data_loc=em_real8       test=14   proc=3 cenv='WRF_EM_CORE=1'
-      - name=qss8_s   core=em_quarter_ss  par=32 nest=1 flag='-d -r8' data_loc=em_quarter_ss8 test=03   proc=1 cenv='WRF_EM_CORE=1'
-      - name=qss8_o   core=em_quarter_ss  par=33 nest=1 flag='-d -r8' data_loc=em_quarter_ss8 test=03   proc=3 cenv='WRF_EM_CORE=1'
-      - name=qss8_m   core=em_quarter_ss  par=34 nest=1 flag='-d -r8' data_loc=em_quarter_ss8 test=03   proc=3 cenv='WRF_EM_CORE=1'
-      - name=move_m   core=em_real        par=34 nest=3 flag='-d'     data_loc=em_move        test=01   proc=3 cenv='WRF_EM_CORE=1'
-      - name=fire_s   core=em_fire        par=32 nest=1 flag='-d'     data_loc=em_fire        test=01   proc=1 cenv='WRF_EM_CORE=1'
-      - name=fire_o   core=em_fire        par=33 nest=1 flag='-d'     data_loc=em_fire        test=01   proc=3 cenv='WRF_EM_CORE=1'
-      - name=fire_m   core=em_fire        par=34 nest=1 flag='-d'     data_loc=em_fire        test=01   proc=3 cenv='WRF_EM_CORE=1'
-      - name=hill_s   core=em_hill2d_x    par=32 nest=0 flag='-d'     data_loc=em_hill2d_x    test=01   proc=1 cenv='WRF_EM_CORE=1'
+      - name=real_s   core=em_real        par=32 nest=1 flag='  '     data_loc=em_real        test=07NE proc=1 cenv='WRF_EM_CORE=1'
+      - name=real_o   core=em_real        par=33 nest=1 flag='  '     data_loc=em_real        test=07NE proc=3 cenv='WRF_EM_CORE=1'
+      - name=real_m   core=em_real        par=34 nest=1 flag='  '     data_loc=em_real        test=07NE proc=3 cenv='WRF_EM_CORE=1'
+      - name=nmm_s    core=nmm_real       par=32 nest=1 flag='  '     data_loc=nmm_nest       test=01   proc=1 cenv='WRF_NMM_CORE=1'
+      - name=nmm_m    core=nmm_real       par=34 nest=1 flag='  '     data_loc=nmm_nest       test=01   proc=3 cenv='WRF_NMM_CORE=1'
+      - name=qss_s    core=em_quarter_ss  par=32 nest=1 flag='  '     data_loc=em_quarter_ss  test=02NE proc=1 cenv='WRF_EM_CORE=1'
+      - name=qss_o    core=em_quarter_ss  par=33 nest=1 flag='  '     data_loc=em_quarter_ss  test=02NE proc=3 cenv='WRF_EM_CORE=1'
+      - name=qss_m    core=em_quarter_ss  par=34 nest=1 flag='  '     data_loc=em_quarter_ss  test=02NE proc=3 cenv='WRF_EM_CORE=1'
+      - name=bw_s     core=em_b_wave      par=32 nest=1 flag='  '     data_loc=em_b_wave      test=1NE  proc=1 cenv='WRF_EM_CORE=1'
+      - name=bw_o     core=em_b_wave      par=33 nest=1 flag='  '     data_loc=em_b_wave      test=1NE  proc=3 cenv='WRF_EM_CORE=1'
+      - name=bw_m     core=em_b_wave      par=34 nest=1 flag='  '     data_loc=em_b_wave      test=1NE  proc=3 cenv='WRF_EM_CORE=1'
+      - name=real8_s  core=em_real        par=32 nest=1 flag='   -r8' data_loc=em_real8       test=14   proc=1 cenv='WRF_EM_CORE=1'
+      - name=real8_o  core=em_real        par=33 nest=1 flag='   -r8' data_loc=em_real8       test=14   proc=3 cenv='WRF_EM_CORE=1'
+      - name=real8_m  core=em_real        par=34 nest=1 flag='   -r8' data_loc=em_real8       test=14   proc=3 cenv='WRF_EM_CORE=1'
+      - name=qss8_s   core=em_quarter_ss  par=32 nest=1 flag='   -r8' data_loc=em_quarter_ss8 test=03   proc=1 cenv='WRF_EM_CORE=1'
+      - name=qss8_o   core=em_quarter_ss  par=33 nest=1 flag='   -r8' data_loc=em_quarter_ss8 test=03   proc=3 cenv='WRF_EM_CORE=1'
+      - name=qss8_m   core=em_quarter_ss  par=34 nest=1 flag='   -r8' data_loc=em_quarter_ss8 test=03   proc=3 cenv='WRF_EM_CORE=1'
+      - name=move_m   core=em_real        par=34 nest=3 flag='  '     data_loc=em_move        test=01   proc=3 cenv='WRF_EM_CORE=1'
+      - name=fire_s   core=em_fire        par=32 nest=1 flag='  '     data_loc=em_fire        test=01   proc=1 cenv='WRF_EM_CORE=1'
+      - name=fire_o   core=em_fire        par=33 nest=1 flag='  '     data_loc=em_fire        test=01   proc=3 cenv='WRF_EM_CORE=1'
+      - name=fire_m   core=em_fire        par=34 nest=1 flag='  '     data_loc=em_fire        test=01   proc=3 cenv='WRF_EM_CORE=1'
+      - name=hill_s   core=em_hill2d_x    par=32 nest=0 flag='  '     data_loc=em_hill2d_x    test=01   proc=1 cenv='WRF_EM_CORE=1'
+#  NO chem, ever, I am not kidding, for reals!
+#     - name=chem_s   core=em_real        par=32 nest=1 flag='  '     data_loc=em_chem        test=1    proc=1 cenv='WRF_CHEM=1'
+#     - name=chem_m   core=em_real        par=34 nest=1 flag='  '     data_loc=em_chem        test=1    proc=3 cenv='WRF_CHEM=1'
 
 
 services:
