--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ script:
   - date
   - docker ps -a
   - date
-  - travis_wait docker exec ${name} ./script.csh BUILD CLEAN ${par} ${nest} ${core} ${flag} J=-j@3 ${cenv}
+  - travis_wait 25 docker exec ${name} ./script.csh BUILD CLEAN ${par} ${nest} ${core} ${flag} J=-j@3 ${cenv}
   - date
   - OK=0
   - |
